[package]
name = "esp-rs-test"
version = "0.1.0"
authors = ["Eli Dowling <eli.dowling@comparethemarket.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
esp-idf-hal = "0.38"
embedded-graphics = "0.7.1"
anyhow= "1.0.58"
sh1106 = "0.4.0"
ssd1306 = "0.7.0"
embedded-hal = "0.2.7"
[build-dependencies]
embuild = "0.29"
anyhow = "1"
